# goodoc

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: integration.yml  release.yml
goodoc/: main.py
src/goodoc/: auth.py  config.py  drive.py  main.py  setup.py
tests/: conftest.py  test_auth.py  test_config.py  test_drive.py  test_main.py
workflow/Contents/: Info.plist  document.wflow
