[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "goodoc"
version = "0.1.0"
description = "Upload office files to Google Drive with auto-conversion to Docs/Sheets/Slides"
readme = "README.md"
license = "MIT"
authors = [{ name = "Igor Djachenko" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.0",
    "typer>=0.9",
]

[project.urls]
Homepage = "https://github.com/djachenko/goodoc"
Repository = "https://github.com/djachenko/goodoc"
Issues = "https://github.com/djachenko/goodoc/issues"

[project.scripts]
goodoc = "goodoc.main:app"

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
tag_name = "v{new_version}"
pre_commit_hooks = ["git-cliff --latest --strip header -o RELEASE_NOTES.md"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'