[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "goodoc"
version = "0.1.0"
description = "Upload office files to Google Drive with auto-conversion to Docs/Sheets/Slides"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Igor Djachenko" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
dependencies = [
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.0",
    "typer>=0.9",
]

[project.optional-dependencies]
test = ["pytest", "ruff", "mypy"]
release = ["build", "python-semantic-release"]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/djachenko/goodoc"
Repository = "https://github.com/djachenko/goodoc"
Issues = "https://github.com/djachenko/goodoc/issues"

[project.scripts]
goodoc = "goodoc.main:app"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
build_command = "pip install build && python -m build"
changelog_file = "CHANGELOG.md"
commit_message = "chore(release): v{version} [skip ci]"
